# lang-frontend

./: Cargo.toml  README.md  grammar.bnf  text.txt
.cargo/: config.toml
examples/: objective.lang  simple  simple.lang  test.lang
src/: ast.rs  inferer.rs  lib.rs  main.rs  parser.rs  token.rs  tokenizer.rs  types.rs
